--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-    <title>Ownfoil | {{title}}</title>
+    <title>MyFoil | {{title}}</title>
     {%else%}
-    <title>Ownfoil</title>
+    <title>MyFoil</title>
     {%endif%}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -24,6 +24,10 @@
 <body>
     {% block content %}
     {% endblock %}
+    
+    <footer class="p-3 text-center text-secondary mt-5" style="font-size: 0.8rem;">
+        MyFoil Build: {{ build_version }}
+    </footer>
 </body>
 
 </html>
