--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-secondary bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ownfoil</a>
+        <a class="navbar-brand" href="#">MyFoil</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,15 +8,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link{% if title == 'Library' %} active" aria-current="page"{% else %}"{% endif %} href="/">Library</a>
+                    <a class="nav-link{% if title == 'Library' %} active" aria-current="page" {% else %}"{% endif %}
+                        href="/">Library</a>
                 </li>
                 {% if current_user.is_admin or admin_account_created == false %}
                 <li class="nav-item">
-                    <a class="nav-link{% if title == 'Settings' %} active" aria-current="page"{% else %}"{% endif %}" href="/settings">Settings</a>
+                    <a class="nav-link{% if title == 'Settings' %} active" aria-current="page" {% else %}"{% endif %}"
+                        href="/settings">Settings</a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link{% if title == 'Setup' %} active" aria-current="page"{% else %}"{% endif %}" href="#">Setup</a>
+                    <a class="nav-link{% if title == 'Setup' %} active" aria-current="page" {% else %}"{% endif %}"
+                        href="#">Setup</a>
                 </li>
             </ul>
             {% if current_user.is_authenticated %}
