--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -12,7 +12,7 @@
                 {% if admin_account_created == false %}
                 <div class="alert alert-danger" role="alert">
                     <h4 class="alert-heading">Missing admin account!</h4>
-                    <p>Ownfoil requires an admin account to enable authentication. Until an account with admin rights is
+                    <p>MyFoil requires an admin account to enable authentication. Until an account with admin rights is
                         created, <strong>authentication is disabled, anyone can access and change the configuration of
                             your shop!</strong>
                         <br>
@@ -26,14 +26,14 @@
                 <div id="missingKeysAlert" class="alert alert-warning alert-dismissible fade show" role="alert">
                     <h4 class="alert-heading">Missing console keys!</h4>
                     Console keys are required to decrypt any Nintendo content, including
-                    backups. Ownfoil uses this to identify files, regardless of the filename.</br>
+                    backups. MyFoil uses this to identify files, regardless of the filename.</br>
                     <strong>Titles will be missed or misidentified if you don't fill in your keys!</strong>
                     See <a target="_blank"
                         href="https://gitlab.com/easyhacking/switch/-/wikis/home/getting-started/dump-keys"
                         class="alert-link">this guide</a> on
                     how to extract the
                     keys from your console, and upload them <a href="/settings#consoleKeysInput" class="alert-link">here
-                        in Ownfoil.</a>
+                        in MyFoil.</a>
                     <hr>
                     If keys are missing, all files <strong>must follow the format "Title Name
                         [TITLEID][vVERSION]"</strong>, else the file won't be recognized.
@@ -46,7 +46,7 @@
                     <h4 class="alert-heading">Missing shop Host!</h4>
                     Host verification from outside the local network is disabled if the shop <code>Host</code> is
                     missing, configure it <a href="/settings#shopHostInput" class="alert-link">here
-                        in Ownfoil</a> to prevent someone else stealing from your shop.
+                        in MyFoil</a> to prevent someone else stealing from your shop.
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
 
@@ -238,7 +238,7 @@
                     </div>
                     <div id="consoleKeysHelp" class="form-text">Console keys are required to decrypt any Nintendo
                         content, including
-                        backups. Ownfoil uses this to identify files, regardless of the filename.
+                        backups. MyFoil uses this to identify files, regardless of the filename.
                     </div>
                 </div>
 
