--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,33 @@
 {% include 'nav.html' %}
 <div id="content" class="container-fluid mt-3">
 
+    <div class="row mb-4 text-center justify-content-center">
+        <div class="col-md-3">
+            <div class="card bg-primary text-white h-100">
+                <div class="card-body">
+                    <h6 class="card-title text-uppercase">Total Games</h6>
+                    <p class="card-text display-6 fw-bold">{{ total_games }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card bg-success text-white h-100">
+                <div class="card-body">
+                    <h6 class="card-title text-uppercase">Total DLCs</h6>
+                    <p class="card-text display-6 fw-bold">{{ total_dlcs }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card bg-info text-dark h-100">
+                <div class="card-body">
+                    <h6 class="card-title text-uppercase">Total Files</h6>
+                    <p class="card-text display-6 fw-bold">{{ total_files }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row gy-2 gx-3 align-items-center justify-content-md-center">
 
         <div class="col-auto">
@@ -17,13 +44,15 @@
                     <ul class="dropdown-menu">
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckBase">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckBase">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckBase">
                                 BASE
                             </label>
                         </li>
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckDlc">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckDlc">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckDlc">
                                 DLC
                             </label>
                         </li>
@@ -32,13 +61,15 @@
                         </li>
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckOwned">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckOwned">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckOwned">
                                 Owned
                             </label>
                         </li>
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckMissing">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckMissing">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckMissing">
                                 Missing
                             </label>
                         </li>
@@ -47,13 +78,15 @@
                         </li>
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckUpToDate">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckUpToDate">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckUpToDate">
                                 Up to date
                             </label>
                         </li>
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckMissingUpdate">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckMissingUpdate">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckMissingUpdate">
                                 Missing Update
                             </label>
                         </li>
@@ -62,13 +95,15 @@
                         </li>
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckComplete">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckComplete">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckComplete">
                                 Complete
                             </label>
                         </li>
                         <li>
                             <label class="form-check-label dropdown-item" for="filterCheckMissingDlc">
-                                <input class="form-check-input filterLabel" type="checkbox" value="" id="filterCheckMissingDlc">
+                                <input class="form-check-input filterLabel" type="checkbox" value=""
+                                    id="filterCheckMissingDlc">
                                 Missing DLC
                             </label>
                         </li>
@@ -86,12 +121,12 @@
         </div>
         <div class="col-auto">
             <div class="btn-group" role="group">
-                <button id="view-toggle-btn-card" type="button" class="btn btn-primary view-toggle-btn active" data-view="card"><i
-                        class="bi bi-card-heading"></i></button>
-                <button id="view-toggle-btn-icon" type="button" class="btn btn-primary view-toggle-btn" data-view="icon"><i
-                        class="bi bi-grid-fill"></i></button>
-                <button id="view-toggle-btn-list" type="button" class="btn btn-primary view-toggle-btn" data-view="list" disabled=""><i
-                        class="bi bi-list-ul"></i></button>
+                <button id="view-toggle-btn-card" type="button" class="btn btn-primary view-toggle-btn active"
+                    data-view="card"><i class="bi bi-card-heading"></i></button>
+                <button id="view-toggle-btn-icon" type="button" class="btn btn-primary view-toggle-btn"
+                    data-view="icon"><i class="bi bi-grid-fill"></i></button>
+                <button id="view-toggle-btn-list" type="button" class="btn btn-primary view-toggle-btn" data-view="list"
+                    disabled=""><i class="bi bi-list-ul"></i></button>
             </div>
         </div>
         <div class="col-auto">
@@ -147,7 +182,7 @@
                 games = data.games;
                 filteredGames = games;
                 resolve();
-            }).fail(function() {
+            }).fail(function () {
                 reject();
             });
         });
@@ -217,7 +252,7 @@
                     .addClass(`text-bg-${game.has_latest_version ? 'success' : 'warning'}`)
                     .html(`<i class="bi ${game.has_latest_version ? 'bi-check-circle-fill' : 'bi-arrow-down-circle'}"></i>`);
                 if (game.version !== undefined && game.version.length && Array.isArray(game.version)) {
-                    const popoverContent = game.version.map(version => 
+                    const popoverContent = game.version.map(version =>
                         `${version.release_date}: v${version.version} ${version.owned ? 'Owned' : 'Missing'}`
                     ).join('\n');
                     versionBadge.popover({
@@ -231,7 +266,7 @@
                     versionBadge.attr("data-bs-toggle", "tooltip")
                     versionBadge.attr("data-bs-placement", "top")
 
-                    if (game.version !== undefined && !game.version.length && Array.isArray(game.version)){
+                    if (game.version !== undefined && !game.version.length && Array.isArray(game.version)) {
                         versionBadge.attr("data-bs-title", "Version v0")
                     } else if (game.version !== undefined && game.version.length) {
                         versionBadge.attr("data-bs-title", "Version v" + game.version)
@@ -402,7 +437,7 @@
         }
 
         const savedCardSize = localStorage.getItem('cardSize');
-        if (savedCardSize){
+        if (savedCardSize) {
             cardSize = parseInt(savedCardSize);
         }
 
@@ -442,7 +477,7 @@
 
         // Event listener for view buttons
         $('.view-toggle-btn').click(function () {
-            $('.view-toggle-btn').removeClass("active"); 
+            $('.view-toggle-btn').removeClass("active");
             $(this).addClass("active");
             const view = $(this).data('view');
             localStorage.setItem('currentView', view)
@@ -453,9 +488,9 @@
             }
             renderGames(games);
         });
-        
+
         // Handle filter checkbox
-        $('.filterLabel').click(function() {
+        $('.filterLabel').click(function () {
             updateFilter();
             applyFilters();
             saveFiltersToStorage();
@@ -478,7 +513,7 @@
         $(document).on('click', '.popover', function (e) {
             e.stopPropagation(); // Prevent the click event from bubbling up
         });
-    
+
     });
 
     // Function to filter cards based on input text
@@ -564,7 +599,7 @@
         }
 
         // Find common elements
-        return nonEmptyArrays.reduce((common, currentArray) => 
+        return nonEmptyArrays.reduce((common, currentArray) =>
             common.filter(item => currentArray.includes(item))
         );
     }
@@ -601,7 +636,7 @@
             if (activeUpdateFilters.has("Outdated")) {
                 gamesFilteredByUpdate = gamesFilteredByUpdate.concat(games.filter(game => game.has_latest_version === false));
             }
-            
+
             if (activeCompletionFilters.has("Complete")) {
                 gamesFilteredByCompletion = gamesFilteredByCompletion.concat(games.filter(game => game.has_all_dlcs === true));
             }
@@ -623,6 +658,6 @@
     //     applyFilters();
     // });
 
-    
+
 </script>
 {% endblock %}
