Added Total Updates to dashboard, fixed source list refresh, added JSON tip

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,14 @@
             </div>
         </div>
         <div class="col-md-3">
+            <div class="card bg-warning text-dark h-100">
+                <div class="card-body">
+                    <h6 class="card-title text-uppercase">Total Updates</h6>
+                    <p class="card-text display-6 fw-bold">{{ total_updates }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
             <div class="card bg-info text-dark h-100">
                 <div class="card-body">
                     <h6 class="card-title text-uppercase">Total Files</h6>
